// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`URL Components Snapshots > UrlDetailsModal > should render when closed 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: abc123"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="abc123" qr-code-url="[object Object]"></qrcodesection>
      <alertmessage data-v-dd4104c0="" type="error" title="Fehler beim Aktualisieren" message="[object Object]"></alertmessage>
      <alertmessage data-v-dd4104c0="" type="success" title="Erfolgreich aktualisiert" message="Die URL wurde erfolgreich geändert."></alertmessage>
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/abc123" short-code="abc123" original-url="https://example.com" loading="[object Object]"></urleditform>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render when open 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: abc123"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="abc123" qr-code-url="[object Object]"></qrcodesection>
      <alertmessage data-v-dd4104c0="" type="error" title="Fehler beim Aktualisieren" message="[object Object]"></alertmessage>
      <alertmessage data-v-dd4104c0="" type="success" title="Erfolgreich aktualisiert" message="Die URL wurde erfolgreich geändert."></alertmessage>
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/abc123" short-code="abc123" original-url="https://example.com" loading="[object Object]"></urleditform>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with different shortCode formats 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: ABC-123_test"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="ABC-123_test" qr-code-url="[object Object]"></qrcodesection>
      <alertmessage data-v-dd4104c0="" type="error" title="Fehler beim Aktualisieren" message="[object Object]"></alertmessage>
      <alertmessage data-v-dd4104c0="" type="success" title="Erfolgreich aktualisiert" message="Die URL wurde erfolgreich geändert."></alertmessage>
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/ABC-123_test" short-code="ABC-123_test" original-url="https://example.com" loading="[object Object]"></urleditform>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with long URLs 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: abc123"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="abc123" qr-code-url="[object Object]"></qrcodesection>
      <alertmessage data-v-dd4104c0="" type="error" title="Fehler beim Aktualisieren" message="[object Object]"></alertmessage>
      <alertmessage data-v-dd4104c0="" type="success" title="Erfolgreich aktualisiert" message="Die URL wurde erfolgreich geändert."></alertmessage>
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/long123" short-code="abc123" original-url="https://very-long-example-url-that-should-be-displayed-properly.com/with/many/path/segments" loading="[object Object]"></urleditform>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with minimal props 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: min"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="min" qr-code-url="[object Object]"></qrcodesection>
      <alertmessage data-v-dd4104c0="" type="error" title="Fehler beim Aktualisieren" message="[object Object]"></alertmessage>
      <alertmessage data-v-dd4104c0="" type="success" title="Erfolgreich aktualisiert" message="Die URL wurde erfolgreich geändert."></alertmessage>
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/min" short-code="min" original-url="https://a.co" loading="[object Object]"></urleditform>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with special characters in URLs 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: special123"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="special123" qr-code-url="[object Object]"></qrcodesection>
      <alertmessage data-v-dd4104c0="" type="error" title="Fehler beim Aktualisieren" message="[object Object]"></alertmessage>
      <alertmessage data-v-dd4104c0="" type="success" title="Erfolgreich aktualisiert" message="Die URL wurde erfolgreich geändert."></alertmessage>
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/special123" short-code="special123" original-url="https://example.com/path?param=value&amp;other=test#section" loading="[object Object]"></urleditform>
    </div>
  </div>
</dialog>"
`;
